[package]
name = "steam-connect"
description = "Implementation Steam web authorization for simple use in projects with or without actix_web"
authors = ["AspectUnk <aspectunk@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/AspectUnk/steam-connect-rs"
documentation = "https://docs.rs/steam-connect"
keywords = ["steam", "login", "auth", "openid", "actix_web"]
categories = ["asynchronous", "authentication", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["actix"]
actix = ["actix-web"]
summaries = []

[dev-dependencies]
env_logger = "0.9.0"
actix-web = "4.0.1"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_qs = "0.9.2"

url = "2.2.2"
reqwest = { version = "0.11.10", features = ["json", "rustls"] }
actix-web = { version = "4.0.1", optional = true }
