[package]
name = "steam-connect"
description = "Implementation Steam web authorization for simple use in projects with or without actix_web"
authors = ["AspectUnk <aspectunk@gmail.com>"]
version = "1.3.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/AspectUnk/steam-connect-rs"
documentation = "https://docs.rs/steam-connect"
keywords = ["steam", "login", "auth", "openid", "actix_web"]
categories = ["asynchronous", "authentication", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["actix"]
actix = ["actix-web"]

[dev-dependencies]
env_logger = "0.9"
actix-web = "4.2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.10"

url = "2.3"
regex = "1.6"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "rustls"] }

actix-web = { version = "4.2", optional = true }

[[example]]
name = "actix"
path = "examples/actix.rs"
